syntax = "proto3";

package example;

message Point {
  double x = 1;
  double y = 2;
  double z = 3;
}

message Velocity {
  double linear_x = 1;
  double linear_y = 2;
  double linear_z = 3;
  double angular_x = 4;
  double angular_y = 5;
  double angular_z = 6;
}

message RobotState {
  string name = 1;
  Point position = 2;
  Velocity velocity = 3;
  int32 battery_level = 4;
  bool is_active = 5;
  repeated string sensors = 6;
}
